# benchmark

./: .gitignore  AGENTS.md  BENCHMARK_DASHBOARD.ipynb  Demo Script.md  README.md  ask_benchmark_spec.json  battery_critical_minerals_pricing_sv.yaml  bmd_streamlit_app.py  manifest.yml  pyproject.toml  snowflake.yml
native_app/: manifest.yml  readme.md
native_app/code_artifacts/streamlit/: environment.yml  streamlit_app.py
native_app/scripts/: setup.sql
